SFDC Automation/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>PartialWinRateSheetCompetitor__c</fullName>
        <description>Use to populate Competitor drop down on Partial Win Rate Sheet Page</description>
        <label>PartialWinRateSheetCompetitor</label>
        <picklist>
            <controllingField>PartialWinDealLostToWonFrom__c</controllingField>
            <picklistValues>
                <fullName>ComCar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dixie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gatorlease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hogan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IdealLease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I don&apos;t know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interstate Natn&apos;l</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NationalLease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM (pls specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (pls specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PacLease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penske</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rollins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>We need the values here</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PartialWinRateSheetStatus__c</fullName>
        <description>Use to show the status on the Partial Win Rate Sheet</description>
        <label>PartialWinRateSheetStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Alternate Pricing Option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Business Granted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won Business about to book this month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won Business about to book next month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PipelineIDGenerator__c</fullName>
        <description>Used to create unique ID&apos;s for the Opportunity.</description>
        <displayFormat>1{0000000}</displayFormat>
        <label>PipelineIDGenerator</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Purchase_Reason_Detail__c</fullName>
        <label>Purchase Reason Detail</label>
        <picklist>
            <controllingField>Purchase_Reason__c</controllingField>
            <picklistValues>
                <fullName>Adding to Current Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacing Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Different Type of Truck Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accident Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit Decommissioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal Fleet Replacement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchase_Reason__c</fullName>
        <label>Purchase Reason</label>
        <picklist>
            <picklistValues>
                <fullName>End of Lease Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Export</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacing Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salvage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starting New Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Push_Counter__c</fullName>
        <description>This field tracks many times an Opportunity has been pushed from month to month</description>
        <inlineHelpText>This field tracks many times an Opportunity has been pushed from month to month</inlineHelpText>
        <label>Push Counter</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPM_Target_Margin__c</fullName>
        <label>RPM Target Margin</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate_Sheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Sheet</label>
        <referenceTo>Rate_Sheet__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_Won_Lost__c</fullName>
        <inlineHelpText>UVS: Reason Lost Only.</inlineHelpText>
        <label>Reason Won/Lost</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Less expensive option available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory maintenance quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet downsizing by a split fleet customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory breakdown service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to meet business needs/ provide flexibility/ act as partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory billing and invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory account management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company declined due to credit- Customer unwilling to agree to credit-related stipulations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient proximity/ convenience of service locations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryder closed location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet downsizing by a 100% Ryder Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer closed location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in transportation model to common carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company declined due to credit-not credit worthy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankruptcy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company acquisition or Management change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Lost - Duplicate Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Declined due to credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ability to Extend Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company out of business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Downsize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I Don&apos;t Know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I Don&apos;t Remember</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue with Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Length of lease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SPLIT_VALUE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Split Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Email_To_Lead_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send Email To Lead Employee</description>
        <label>Send Email To Lead Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solutions_Involved__c</fullName>
        <description>To contain a general indication of whether the opportunity is related to specific product lines. Including these as products would probably be too complex</description>
        <inlineHelpText>Please indicate which products may be involved in the opportunity.
The MMS On Demand - Local option is only to be used for Canada</inlineHelpText>
        <label>Solutions Involved</label>
        <picklist>
            <picklistValues>
                <fullName>Alternative Fuel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flex to Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMS-Comprehensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMS-On Demand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMS On Demand - Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMS-Preventive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STAR</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Specialized_Operating_Criteria__c</fullName>
        <label>Specialized Operating Criteria</label>
        <picklist>
            <picklistValues>
                <fullName>HazMat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialized Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking Agreement</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Split_type__c</fullName>
        <label>Split_type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Star_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if this opportunity is part of the STAR program</description>
        <inlineHelpText>Indicate if this opportunity is part of the STAR program</inlineHelpText>
        <label>STAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TCO_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate if the TCO tool was used in the sales process</description>
        <inlineHelpText>Was the TCO tool used to demonstrate the value of our solution?</inlineHelpText>
        <label>TCO Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Takeover_Competitor__c</fullName>
        <label>Takeover Competitor</label>
        <picklist>
            <controllingField>Takeover_Type__c</controllingField>
            <picklistValues>
                <fullName>I don&apos;t know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IdealLease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NationalLease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PacLease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penske</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rollins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ComCar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dixie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gatorlease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interstate Natn&apos;l</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (pls specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hogan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM (pls specify)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Takeover_Type__c</fullName>
        <label>Takeover Type</label>
        <picklist>
            <controllingField>BOUT_TOVER_CD__c</controllingField>
            <picklistValues>
                <fullName>Takeover from Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Takeover from Ownership</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_EVA__c</fullName>
        <label>Target EVA</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <picklist>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Child_Opportunity_Amount__c</fullName>
        <description>Used to roll up and show the amount of related Child Opportunities on a Parent Opportunity</description>
        <inlineHelpText>This is the amount of related Child Opportunities that are not in &apos;Lost&apos; status.</inlineHelpText>
        <label>Total Child Opportunity Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_EVA__c</fullName>
        <label>Total EVA</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_No_Of_Vehicles_Rental__c</fullName>
        <label>Total No Of Vehicles</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Vehicles_Child__c</fullName>
        <inlineHelpText>Includes the count of Vehicles from all related Child Opportunities</inlineHelpText>
        <label>Total Number of Vehicles (Child)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UTC_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Ryder Branch in order to know the location</description>
        <inlineHelpText>Look up to Ryder Branch in order to know the location</inlineHelpText>
        <label>UTC Assigned</label>
        <referenceTo>Ryder_Branch__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UVS_Source_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UVS Source Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Update_Record_Type__c</fullName>
        <inlineHelpText>Non-National Accounts should have the Standard Opportunity record type.
Local National Accounts with decentralized decision-making should have Child Opportunity record type.</inlineHelpText>
        <label>Update Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Child Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Opportunity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Count__c</fullName>
        <label>Vehicle Count</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WIN_LOST_DATE__c</fullName>
        <label>Win/Lost Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Amount__c</fullName>
        <label>Warranty Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warranty_Provider__c</fullName>
        <label>Warranty Provider</label>
        <picklist>
            <picklistValues>
                <fullName>Ryder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium 2000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <label>Warranty</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Was_this_competitor_the_incumbent__c</fullName>
        <label>Was this competitor the incumbent?</label>
        <picklist>
            <controllingField>CMPT_ID__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Who_is_the_main_incumbent__c</fullName>
        <label>Who is the Main Incumbent</label>
        <picklist>
            <controllingField>Reason_Won_Lost__c</controllingField>
            <picklistValues>
                <fullName>Ideal Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pac Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penske</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None – Net Fleet Growth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ddc_prospector__Sourced_from_Data_com_del__c</fullName>
        <formula>IF( OR(CONTAINS(TEXT(LeadSource),&quot;Jigsaw&quot;),CONTAINS(TEXT(LeadSource),&quot;Data.com&quot;), Account.ddc_prospector__Sourced_from_Data_com__c = 1), &quot;Added from Data.com&quot;,&quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sourced from Data.com</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ext_RenewId__c</fullName>
        <description>Hold the Id for Opportunities generated automatically.</description>
        <externalId>true</externalId>
        <label>ext_RenewId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ext_pipeline_id__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>All_Child_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Child_Opportunity</value>
        </filters>
        <label>All Child Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <group>SystemAdmin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Standard_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Actual_Close_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Booked,Solution Hypothesis,Weigh Solution Options,Overcome Concerns</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2012</value>
        </filters>
        <label>All Standard Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Std_Open_Opps_clos_this_month</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Included_in_Monthly_Forecast__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>All Std Open Opps Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>All_UVS_Opportunity</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Actual_Close_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.UVS_Opportunity</value>
        </filters>
        <label>All UVS Opportunity</label>
    </listViews>
    <listViews>
        <fullName>Closed_opportunities_in_2014</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>EST_DEAL_VAL__c</columns>
        <columns>Actual_Close_Date__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>EVA__c</columns>
        <columns>ext_pipeline_id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Signed,Booked,Lost</value>
        </filters>
        <filters>
            <field>Actual_Close_Date__c</field>
            <operation>lessThan</operation>
            <value>1/1/2015</value>
        </filters>
        <filters>
            <field>Actual_Close_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2014</value>
        </filters>
        <label>Closed opportunities in 2014</label>
        <sharedTo>
            <group>AllNCARoles</group>
            <group>AllSACRoles</group>
            <group>DOS282491</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>EST_DEAL_VAL__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
        <sharedTo>
            <group>SystemAdmin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Closed_opportunities_in_2014</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>EST_DEAL_VAL__c</columns>
        <columns>Actual_Close_Date__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Num_of_vehicles__c</columns>
        <columns>EVA__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Signed,Booked,Lost</value>
        </filters>
        <filters>
            <field>Actual_Close_Date__c</field>
            <operation>lessThan</operation>
            <value>1/1/2015</value>
        </filters>
        <filters>
            <field>Actual_Close_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2014</value>
        </filters>
        <label>My Closed opportunities in 2014</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>EST_DEAL_VAL__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Signed,Booked,Lost</value>
        </filters>
        <label>My Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Sales_Teams_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>EST_DEAL_VAL__c</columns>
        <columns>Num_of_vehicles__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Sales Teams Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Open_Opportunities_for_my_Accounts</fullName>
        <columns>ext_pipeline_id__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>EST_DEAL_VAL__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Solution Hypothesis,Weigh Solution Options,Overcome Concerns,Signed</value>
        </filters>
        <label>Open Opportunities for my Accounts</label>
        <sharedTo>
            <group>Inside_Sales_National</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Oppotunities_Won_Last_Month</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Actual_Close_Date__c</columns>
        <columns>EST_DEAL_VAL__c</columns>
        <columns>OPPORTUNITY.WON</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Actual_Close_Date__c</field>
            <operation>greaterThan</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>Oppotunities Won  Last Month</label>
    </listViews>
</CustomObject>